--- a/DragonGolfBackEnd/Web.config
+++ b/DragonGolfBackEnd/Web.config
@@ -14,6 +14,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+	<connectionStrings>
+		<add name="DGConnectionString" connectionString="Data Source=trascentiserver.database.windows.net,1433;Initial Catalog=Norma;Persist Security Info=False;User ID=administrador;Password=TTI123456_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=0" />
+	</connectionStrings>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
