--- a/DragonGolfBackEnd/packages.config
+++ b/DragonGolfBackEnd/packages.config
@@ -22,6 +22,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.7.1" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.7.1" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
