--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -179,12 +179,16 @@
     <Compile Include="Controllers\Campos\ListaCamposController.cs" />
     <Compile Include="Controllers\Campos\AltaCampoController.cs" />
     <Compile Include="Controllers\Campos\ActualizaCampoController.cs" />
+    <Compile Include="Controllers\Holes\EliminarHolesController.cs" />
+    <Compile Include="Controllers\Holes\ActualizarHolesController.cs" />
     <Compile Include="Controllers\Holes\AltaHolesController.cs" />
     <Compile Include="Controllers\Holes\ListaHoleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Settings\ActualizarSettingsController.cs" />
     <Compile Include="Controllers\Settings\AltaSettingsController.cs" />
     <Compile Include="Controllers\Settings\ListadoSettingsController.cs" />
+    <Compile Include="Controllers\Tees\EliminarTeesController.cs" />
+    <Compile Include="Controllers\Tees\ActualizarTeesController.cs" />
     <Compile Include="Controllers\Tees\AltaTeesController.cs" />
     <Compile Include="Controllers\Tees\ListaTeesController.cs" />
     <Compile Include="Controllers\Usuario\ActualizarUsuarioController.cs" />
