--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -193,11 +193,14 @@
     <Compile Include="Controllers\Invitados\ListaTodosController.cs" />
     <Compile Include="Controllers\Invitados\ListadoInvitadosController.cs" />
     <Compile Include="Controllers\Ronda\AgregarAmigosRondaController.cs" />
+    <Compile Include="Controllers\Ronda\AgregarTeesRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoRondaController.cs" />
     <Compile Include="Controllers\Ronda\CrearRondaController.cs" />
     <Compile Include="Controllers\Settings\ActualizarSettingsController.cs" />
+    <Compile Include="Controllers\Settings\AltaSettingsFriendController.cs" />
     <Compile Include="Controllers\Settings\AltaSettingsController.cs" />
+    <Compile Include="Controllers\Settings\ListadoSettingsFriendController.cs" />
     <Compile Include="Controllers\Settings\ListadoSettingsController.cs" />
     <Compile Include="Controllers\Tees\EliminarTeesController.cs" />
     <Compile Include="Controllers\Tees\ActualizarTeesController.cs" />
