--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\Amigos\ListaAmigosController.cs" />
     <Compile Include="Controllers\Apuestas\CalcularApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\CrearDetalleApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaIndividualController.cs" />
     <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\ListaApuestaController.cs" />
     <Compile Include="Controllers\Campos\CopiarCampoController.cs" />
