--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\Ronda\AgregarTeesRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRonda2Controller.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaAllController.cs" />
+    <Compile Include="Controllers\Ronda\ListadoAmigosRondaTodosController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaDataController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoTeesRondaController.cs" />
