--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaDataController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoTeesRondaController.cs" />
+    <Compile Include="Controllers\Ronda\ListadoMontoPerdidoGanadoController.cs" />
     <Compile Include="Controllers\Ronda\ListadoRondaStrokerController.cs" />
     <Compile Include="Controllers\Ronda\ListadoRondaController.cs" />
     <Compile Include="Controllers\Ronda\CrearRondaController.cs" />
