--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -221,8 +221,10 @@
     <Compile Include="Controllers\Ronda\ListadoAmigosRonda2Controller.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaAllController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaTodosController.cs" />
+    <Compile Include="Controllers\Ronda\ListadoAmigosRondaIndividualController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaDataController.cs" />
     <Compile Include="Controllers\Ronda\ListadoAmigosRondaController.cs" />
+    <Compile Include="Controllers\Ronda\ListadoTeesRondaBetDetailsController.cs" />
     <Compile Include="Controllers\Ronda\ListadoTeesRondaController.cs" />
     <Compile Include="Controllers\Ronda\ListadoMontoPerdidoGanadoController.cs" />
     <Compile Include="Controllers\Ronda\ListadoRondaStrokerController.cs" />
