--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\ListaApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CalcularApuestaTeamNassauController.cs" />
+    <Compile Include="Controllers\Apuestas\TeamNassau\CrearDetalleApuestaTeamController.cs" />
     <Compile Include="Controllers\Campos\CopiarCampoController.cs" />
     <Compile Include="Controllers\Campos\EliminarCampoController.cs" />
     <Compile Include="Controllers\Campos\ListaCamposTodosController.cs" />
@@ -219,6 +220,7 @@
     <Compile Include="Controllers\Ronda\ActualizaStrokerPvPRondaController.cs" />
     <Compile Include="Controllers\Ronda\ActualizarScoreHoyoController.cs" />
     <Compile Include="Controllers\Ronda\ActualizarRondaController.cs" />
+    <Compile Include="Controllers\Ronda\CerrarRondaController.cs" />
     <Compile Include="Controllers\Ronda\EliminarAmigosRondaController.cs" />
     <Compile Include="Controllers\Ronda\AgregarAmigosRondaController.cs" />
     <Compile Include="Controllers\Ronda\AgregarTeesRondaController.cs" />
