--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -192,6 +192,9 @@
     <Compile Include="Controllers\Apuestas\ListaApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CalcularApuestaTeamNassauController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CrearDetalleApuestaTeamController.cs" />
+    <Compile Include="Controllers\Apuestas\TeamNassau\ListadoAmigosRondaTeamController.cs" />
+    <Compile Include="Controllers\Apuestas\TeamNassau\ListadoDetalleApuestaTeamController.cs" />
+    <Compile Include="Controllers\Apuestas\TeamNassau\ListadoTeesRondaBetDetailsTeamController.cs" />
     <Compile Include="Controllers\Campos\CopiarCampoController.cs" />
     <Compile Include="Controllers\Campos\EliminarCampoController.cs" />
     <Compile Include="Controllers\Campos\ListaCamposTodosController.cs" />
