--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\ListaApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CalcularApuestaTeamNassauController.cs" />
+    <Compile Include="Controllers\Apuestas\TeamNassau\ActualizarDetalleApuestaTeamController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CrearDetalleApuestaTeamController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\ListadoAmigosRondaTeamController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\ListadoDetalleApuestaTeamController.cs" />
