--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\Invitados\ListaTodosAgregarController.cs" />
     <Compile Include="Controllers\Invitados\ListaTodosController.cs" />
     <Compile Include="Controllers\Invitados\ListadoInvitadosController.cs" />
+    <Compile Include="Controllers\Ronda\AbrirRondaController.cs" />
     <Compile Include="Controllers\Ronda\CerrarRondaController.cs" />
     <Compile Include="Controllers\Ronda\ActualizarRondaHoyosController.cs" />
     <Compile Include="Controllers\Ronda\ActualizaStrokerPvPRondaController.cs" />
