fracciones en single nassau

--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -183,13 +183,13 @@
     <Compile Include="Controllers\Amigos\QuitarAmigosController.cs" />
     <Compile Include="Controllers\Amigos\AltaAmigosController.cs" />
     <Compile Include="Controllers\Amigos\ListaAmigosController.cs" />
-    <Compile Include="Controllers\Apuestas\CalcularApuestaController.cs" />
-    <Compile Include="Controllers\Apuestas\ActualizarDetalleApuestaController.cs" />
-    <Compile Include="Controllers\Apuestas\EliminaApuestaController.cs" />
-    <Compile Include="Controllers\Apuestas\CrearDetalleApuestaController.cs" />
-    <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaIndividualController.cs" />
-    <Compile Include="Controllers\Apuestas\ListadoDetalleApuestaController.cs" />
-    <Compile Include="Controllers\Apuestas\ListaApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\CalcularApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\ActualizarDetalleApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\EliminaApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\CrearDetalleApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\ListadoDetalleApuestaIndividualController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\ListadoDetalleApuestaController.cs" />
+    <Compile Include="Controllers\Apuestas\SingleNassau\ListaApuestaController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CalcularApuestaTeamNassauController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\ActualizarDetalleApuestaTeamController.cs" />
     <Compile Include="Controllers\Apuestas\TeamNassau\CrearDetalleApuestaTeamController.cs" />
