--- a/DragonGolfBackEnd/DragonGolfBackEnd.csproj
+++ b/DragonGolfBackEnd/DragonGolfBackEnd.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Controllers\Invitados\ListaTodosAgregarController.cs" />
     <Compile Include="Controllers\Invitados\ListaTodosController.cs" />
     <Compile Include="Controllers\Invitados\ListadoInvitadosController.cs" />
+    <Compile Include="Controllers\Ronda\CambioRondaController.cs" />
     <Compile Include="Controllers\Ronda\AbrirRondaController.cs" />
     <Compile Include="Controllers\Ronda\HandicapIndexController.cs" />
     <Compile Include="Controllers\Ronda\HistoriaController.cs" />
