adecuaciones cambio ventaja

--- a/DragonGolfBackEnd/Web.config
+++ b/DragonGolfBackEnd/Web.config
@@ -23,7 +23,8 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <connectionStrings>
-    <add name="DGConnectionString" connectionString="Data Source=trascentiserver.database.windows.net,1433;Initial Catalog=Norma;Persist Security Info=False;User ID=administrador;Password=TTI123456_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=0"/>
+    <!--<add name="DGConnectionString" connectionString="Data Source=dragongolf.database.windows.net,1433;Initial Catalog=DragonGolf;Persist Security Info=False;User ID=administrador;Password=44Brancill0_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=0"/>-->
+    <add name="DGConnectionString" connectionString="Data Source=dragongolf.database.windows.net,1433;Initial Catalog=DragonGolfTest;Persist Security Info=False;User ID=administrador;Password=44Brancill0_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=0"/>
   </connectionStrings>
   <system.webServer>
     <handlers>
